# misc

./: README
descartes/: .gitignore  README  descartes.opam  dune-project  flake.nix
descartes/lib/: charset.ml  dune  format.ml  format.mli  label.ml  report.ml  types.ml  write.ml
euler/: problem1.hs  problem10.hs  problem11.lisp  problem2.lisp  problem3.lisp  problem4.hs  problem5.hs  problem6.lisp  problem7.hs  problem8.lisp  problem9.lisp  shell.nix
fractals/: shell.nix
fractals/julia/: README  run.py
fractals/mandelbrot/: main.py
lenia/: Cargo.toml  flake.nix
lenia/src/: lib.rs  main.rs  pattern.rs
lisek/: Cargo.toml  README  flake.nix
lisek/docs/: bool.md  cond.md  let.md  loop.md  math.md  overview.lis
lisek/src/: arithmetic.rs  (+7 more)
lys/: README.md
russs/: Cargo.toml  flake.nix  model.txt
secd/: .gitignore  LICENSE  SECD  secd.c  secd.hs  shell.nix
typecheckers/: Cargo.toml  README  flake.nix
typecheckers/hm/: Cargo.toml  prog
typecheckers/hm/src/: ast.rs  error.rs  inference.rs  main.rs  parser.rs
typecheckers/src/: main.rs
typecheckers/stlc/: Cargo.toml  prog
typecheckers/stlc/src/: ast.rs  error.rs  main.rs  parser.rs  typechecker.rs
website-0/: .gitignore  README.md  flake.nix  package-lock.json  tailwind.config.js  website.cabal
website-1/: .gitignore  .ocamlformat  Dockerfile  README.asciidoc  dune-project  flake.nix  tailwind.config.js  website.opam
website-1/lib/: article.ml  collection.ml  dune
website-1/lib/articles/: efficient_memory_approach_for_conways_game_of_life.ml  presentation.ml
website-1/static/: input.css
(+15 files in other folders)
