(lang dune 3.0)

(name descartes)

(generate_opam_files true)

(source
 (github lokasku/descartes))

(maintainers Lokasku Aljebriq)

(authors Lokasku Aljebriq)

(license GPL-3.0-or-later)

(package
 (name descartes)
 (synopsis "Refined compiler error diagnostics")
 (description "A package to display refined compiler error diagnostics.")
 (depends
  (ocaml
   (>= 5))
  ppx_deriving)
 (tags
  (diagnostics error)))
