(lang dune 3.11)

(name website)

(generate_opam_files true)

(source
 (github Lokasku/website))

(authors "Lokasku <lukasku@proton.me>")

(maintainers "Lokasku <lukasku@proton.me>")

(license "GPL-3")

(documentation https://url/to/documentation)

(package
 (name website)
 (synopsis "My personal website")
 (description "My very personal website")
 (depends ocaml dune dream dream-html)
 (tags
  (topics "website")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-projecté